package rust.tinyspring.beans.factory;

public interface BeanFactory {
    Object getBean(String name);
}
