package rust.tinyspring.factory;

public interface AutoWireCapableBeanFactory extends BeanFactory {
}
